fixed spacing in contact page

--- a/contact.css
+++ b/contact.css
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     background-color: #E5E5E5;
-    width: 40%;
+    width: 45%;
     height: auto;
     min-height: 85%;
     margin: 20px;
@@ -38,7 +38,7 @@
 
 
 #contact-form {
-    max-width: 400px;
+    width: 100%;
     padding: 20px;
     display: flex;
     flex-direction: column;
